--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "api": "nodemon backend/src/index.js",
+    "sud": "nodemon SUD/src/index.js",
     "client": "nodemon frontend/src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,8 +21,12 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "flash": "^1.1.0",
+    "mongoose": "^7.0.3",
     "node-fetch": "^2.6.8",
-    "path": "^0.12.7"
+    "nodemailer": "^6.9.1",
+    "path": "^0.12.7",
+    "slugify": "^1.6.6",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
