--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-handlebars": "^6.0.6",
     "express-session": "^1.17.3",
     "flash": "^1.1.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.3",
     "node-fetch": "^2.6.8",
     "nodemailer": "^6.9.1",
