--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ CLIENT_PORT = 3000
 API_PORT = 8000
 SUD_PORT = 5000
 API_URL = http:localhost:8080/api/
+SUD_URL = http:localhost:5000/api/
 EMAIL_HOST = contact.ezticket@gmail.com
 EMAIL_HOST2 = contact.ezgroup@gmail.com
 PASSWORD_HOST = rvbqaucerzakvrdl
