--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "node-fetch": "^2.6.8",
     "nodemailer": "^6.9.1",
     "path": "^0.12.7",
+    "qrcode": "^1.5.1",
     "slugify": "^1.6.6",
     "uuidv4": "^6.2.13"
   },
