--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ API_PORT = 8000
 SUD_PORT = 5000
 API_URL = http:localhost:8000/api/
 SUD_URL = http:localhost:5000/api/
+PAYMENT_URL = http:localhost:4000/
 EMAIL_HOST = contact.ezticket@gmail.com
 EMAIL_HOST2 = contact.ezgroup@gmail.com
 PASSWORD_HOST = rvbqaucerzakvrdl
